--- a/museum-content.html
+++ b/museum-content.html
@@ -555,7 +555,7 @@
                     <div class="timeline-content">
                         <h3>1980-1990年代 · 现代化改造</h3>
                         <div class="timeline-img">
-                            <img src="images/people/5.上世纪80年代学校领导班子合影.jpg" alt="上世纪80年代学校领导班子合影">
+                            <img src="images/museum/1998.png" alt="上世纪80年代学校领导班子合影">
                         </div>
                         <p><strong>校址迁移：</strong>1998年11月，学校逐步迁址到中坝南路6号，即现校址。</p>
                         <p><strong>设施升级：</strong>学校进行了现代化改造，修建了标准的运动场和实验楼。</p>
@@ -568,7 +568,7 @@
                     <div class="timeline-content">
                         <h3>2000-2010年代 · 全面发展</h3>
                         <div class="timeline-img">
-                            <img src="images/people/6.学校建校80周年庆祝大会场景.jpg" alt="学校建校80周年庆祝大会场景">
+                            <img src="images/museum/d058ccbf6c81800a19d88944ec6c24fa828ba61ee97a.webp" alt="学校建校80周年庆祝大会场景">
                         </div>
                         <p><strong>合并与转型：</strong>2004年，与海安教师进修学校附属小学合并为海安县实验小学总校。</p>
                         <p><strong>回归公办：</strong>2010年，学校转回公办体制，恢复名称为海安县实验小学。</p>
@@ -952,4 +952,5 @@
         });
     </script>
 </body>
+
 </html>
