--- a/people-gallery.html
+++ b/people-gallery.html
@@ -251,7 +251,7 @@
                 
                 <div class="person-card">
                     <div class="person-img">
-                        <img src="images/museum/金沙.jpg" alt="金沙校长">
+                        <img src="images/museum/校长8金沙.JPG" alt="金沙校长">
                     </div>
                     <div class="person-content">
                         <h3>金沙</h3>
@@ -283,7 +283,7 @@
                 <!-- 校友卡片 -->
                 <div class="person-card">
                     <div class="person-img">
-                        <img src="images/museum/1.陈亮，93届校友，清华大学硕士.jpg" alt="陈亮校友">
+                        <img src="images/museum/1.陈亮，93届校友，清华大学硕士.JPG" alt="陈亮校友">
                     </div>
                     <div class="person-content">
                         <h3>陈亮</h3>
@@ -516,3 +516,4 @@
 </body>
 
 </html>
+
