--- a/people-gallery.html
+++ b/people-gallery.html
@@ -375,7 +375,7 @@
                 
                 <div class="person-card">
                     <div class="person-img">
-                        <img src="images/museum/110周年全体教职员工合影.jpg" alt="李阿姨">
+                        <img src="images/museum/李阿姨.jpg" alt="李阿姨">
                     </div>
                     <div class="person-content">
                         <h3>李阿姨</h3>
@@ -516,4 +516,5 @@
 </body>
 
 </html>
+
 
