--- a/people-gallery.html
+++ b/people-gallery.html
@@ -355,7 +355,7 @@
                 <!-- 幕后英雄卡片 -->
                 <div class="person-card">
                     <div class="person-img">
-                        <img src="images/museum/110周年全体教职员工合影.jpg" alt="张师傅">
+                        <img src="images/museum/张师傅.png" alt="张师傅">
                     </div>
                     <div class="person-content">
                         <h3>张师傅</h3>
@@ -393,27 +393,7 @@
                     </div>
                 </div>
                 
-                <div class="person-card">
-                    <div class="person-img">
-                        <img src="images/museum/110周年全体教职员工合影.jpg" alt="王师傅">
-                    </div>
-                    <div class="person-content">
-                        <h3>王师傅</h3>
-                        <div class="person-title">园丁，在校工作20年</div>
-                        <div class="person-description">
-                            用双手培育校园的一草一木，让校园四季如画，为师生创造优美的学习环境。
-                        </div>
-                        <div class="person-achievements">
-                            <ul>
-                                <li>培育多种珍稀植物</li>
-                                <li>设计校园绿化景观</li>
-                                <li>带领学生开展种植活动</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <!-- 页脚 -->
@@ -516,5 +496,6 @@
 </body>
 
 </html>
+
 
 
