--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -723,7 +723,7 @@
                 <!-- 1960年代照片 -->
                 <div class="photo-card" data-year="1960s">
                     <div class="photo-img">
-                        <img src="images/people/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.jpg" alt="1962年教学实况录播">
+                        <img src="images/people/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="1962年教学实况录播">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1962年教学实况录播</div>
@@ -1447,4 +1447,5 @@
         });
     </script>
 </body>
+
 </html>
