--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -711,7 +711,7 @@
                 
                 <div class="photo-card" data-year="1950s">
                     <div class="photo-img">
-                        <img src="images/people/4.1957年全校女教师合影.jpg" alt="1957年全校女教师合影">
+                        <img src="images/museum/4.1957年全校女教师合影.jpg" alt="1957年全校女教师合影">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1957年全校女教师合影</div>
@@ -723,7 +723,7 @@
                 <!-- 1960年代照片 -->
                 <div class="photo-card" data-year="1960s">
                     <div class="photo-img">
-                        <img src="images/people/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="1962年教学实况录播">
+                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="1962年教学实况录播">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1962年教学实况录播</div>
@@ -735,7 +735,7 @@
                 <!-- 1970年代照片 -->
                 <div class="photo-card" data-year="1970s">
                     <div class="photo-img">
-                        <img src="images/people/8.1975年教师合影.jpg" alt="1975年教师合影">
+                        <img src="images/museum/8.1975年教师合影.jpg" alt="1975年教师合影">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1975年教师合影</div>
@@ -1449,3 +1449,4 @@
 </body>
 
 </html>
+
