--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -822,7 +822,7 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/yu-zizhen-full.mp3" type="audio/mpeg">
+                            <source src="audio/开场.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
@@ -842,7 +842,7 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/zhang-jiguang-full.mp3" type="audio/mpeg">
+                            <source src="audio/人物故事.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
@@ -862,7 +862,7 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/ding-xiuyuan-full.mp3" type="audio/mpeg">
+                            <source src="audio/校园历史.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
@@ -882,7 +882,7 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/qin-yu-full.mp3" type="audio/mpeg">
+                            <source src="audio/建筑档案.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
@@ -909,8 +909,8 @@
             <div class="video-library">
                 <!-- 视频卡片 -->
                 <div class="video-card">
-                    <div class="video-player" onclick="playVideo('videos/100th-anniversary.mp4', '学校100周年校庆盛典')">
-                        <img src="images/videos/100th-anniversary-thumb.jpg" alt="学校100周年校庆盛典">
+                    <div class="video-player" onclick="playVideo('videos/微信视频2025-10-08_105923_716.mp4', '学校100周年校庆盛典')">
+                        <img src="images/videos/微信视频2025-10-08_105923_716.mp4" alt="学校100周年校庆盛典">
                         <div class="play-icon">
                             <i class="fas fa-play"></i>
                         </div>
@@ -923,8 +923,8 @@
                 </div>
                 
                 <div class="video-card">
-                    <div class="video-player" onclick="playVideo('videos/1998-relocation.mp4', '1998年学校迁址仪式')">
-                        <img src="images/videos/1998-relocation-thumb.jpg" alt="1998年学校迁址仪式">
+                    <div class="video-player" onclick="playVideo('videos/微信视频2025-10-08_105931_316.mp4', '1998年学校迁址仪式')">
+                        <img src="images/videos/微信视频2025-10-08_105931_316.mp4" alt="1998年学校迁址仪式">
                         <div class="play-icon">
                             <i class="fas fa-play"></i>
                         </div>
@@ -937,8 +937,8 @@
                 </div>
                 
                 <div class="video-card">
-                    <div class="video-player" onclick="playVideo('videos/2010-restoration.mp4', '2010年恢复公办体制庆典')">
-                        <img src="images/videos/2010-restoration-thumb.jpg" alt="2010年恢复公办体制庆典">
+                    <div class="video-player" onclick="playVideo('videos/微信视频2025-10-08_110131_508.mp4', '2010年恢复公办体制庆典')">
+                        <img src="images/videos/微信视频2025-10-08_110131_508.mp4" alt="2010年恢复公办体制庆典">
                         <div class="play-icon">
                             <i class="fas fa-play"></i>
                         </div>
@@ -1120,22 +1120,22 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>关于我们</h3>
+                    <h3>我们的目标</h3>
                     <p>"我们的校园记忆"线上数字博物馆致力于保存和展示校园历史文化</p>
                 </div>
                 <div class="footer-section">
-                    <h3>联系我们</h3>
-                    <p>邮箱：campusmemory@example.com</p>
-                    <p>电话：010-12345678</p>
+                    <h3>关于我们</h3>
+                    <p>作者：全体同学</p>
+                    <p>技术指导：班主任-林柏娟</p>
                 </div>
                 <div class="footer-section">
-                    <h3>关注我们</h3>
-                    <p>微信公众号：校园记忆</p>
-                    <p>微博：@我们的校园记忆</p>
+                    <h3>祝愿</h3>
+                    <p>学校越来越好</p>
+                    <p>我们的前程似锦</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 我们的校园记忆线上数字博物馆 版权所有</p>
+                <p>&copy; 2025 凤山小学六年级21班 版权所有</p>
             </div>
         </div>
     </footer>
@@ -1406,3 +1406,4 @@
     </script>
 </body>
 </html>
+
