--- a/museum-content.html
+++ b/museum-content.html
@@ -809,22 +809,22 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>关于我们</h3>
+                    <h3>我们的目标</h3>
                     <p>"我们的校园记忆"线上数字博物馆致力于保存和展示校园历史文化</p>
                 </div>
                 <div class="footer-section">
-                    <h3>联系我们</h3>
-                    <p>邮箱：campusmemory@example.com</p>
-                    <p>电话：010-12345678</p>
+                    <h3>关于我们</h3>
+                    <p>作者：全体同学</p>
+                    <p>技术指导：班主任-林柏娟</p>
                 </div>
                 <div class="footer-section">
-                    <h3>关注我们</h3>
-                    <p>微信公众号：校园记忆</p>
-                    <p>微博：@我们的校园记忆</p>
+                    <h3>祝愿</h3>
+                    <p>学校越来越好</p>
+                    <p>我们的前程似锦</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 我们的校园记忆线上数字博物馆 版权所有</p>
+                <p>&copy; 2025 凤山小学六年级21班 版权所有</p>
             </div>
         </div>
     </footer>
@@ -954,3 +954,4 @@
 </body>
 
 </html>
+
