--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -711,7 +711,7 @@
                 
                 <div class="photo-card" data-year="1950s">
                     <div class="photo-img">
-                        <img src="images/people/4.1957年全校女教师合影.jpg" alt="1957年全校女教师合影">
+                        <img src="images/museum/4.1957年全校女教师合影.jpg" alt="1957年全校女教师合影">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1957年全校女教师合影</div>
@@ -723,7 +723,7 @@
                 <!-- 1960年代照片 -->
                 <div class="photo-card" data-year="1960s">
                     <div class="photo-img">
-                        <img src="images/people/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.jpg" alt="1962年教学实况录播">
+                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.jpg" alt="1962年教学实况录播">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1962年教学实况录播</div>
@@ -735,7 +735,7 @@
                 <!-- 1970年代照片 -->
                 <div class="photo-card" data-year="1970s">
                     <div class="photo-img">
-                        <img src="images/people/8.1975年教师合影.jpg" alt="1975年教师合影">
+                        <img src="images/museum/8.1975年教师合影.jpg" alt="1975年教师合影">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1975年教师合影</div>
@@ -977,7 +977,7 @@
                 <!-- 建校初期人物 -->
                 <div class="figure-card active" data-era="1900s">
                     <div class="figure-img">
-                        <img src="images/people/8.1975年教师合影.jpg" alt="郁子贞">
+                        <img src="images/museum/8.1975年教师合影.jpg" alt="郁子贞">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">郁子贞</div>
@@ -1000,7 +1000,7 @@
                 <!-- 1950年代人物 -->
                 <div class="figure-card active" data-era="1950s">
                     <div class="figure-img">
-                        <img src="images/people/4.1957年全校女教师合影.jpg" alt="张如娟">
+                        <img src="images/museum/4.1957年全校女教师合影.jpg" alt="张如娟">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">张如娟</div>
@@ -1023,7 +1023,7 @@
                 <!-- 1960年代人物 -->
                 <div class="figure-card active" data-era="1960s">
                     <div class="figure-img">
-                        <img src="images/people/校长4张戢光.jpg" alt="张戢光">
+                        <img src="images/museum/校长4张戢光.jpg" alt="张戢光">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">张戢光</div>
@@ -1046,7 +1046,7 @@
                 <!-- 1980年代人物 -->
                 <div class="figure-card active" data-era="1980s">
                     <div class="figure-img">
-                        <img src="images/people/校长7丁修元.jpg" alt="丁修元">
+                        <img src="images/museum/校长7丁修元.jpg" alt="丁修元">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">丁修元</div>
@@ -1069,7 +1069,7 @@
                 <!-- 1990年代人物 -->
                 <div class="figure-card active" data-era="1990s">
                     <div class="figure-img">
-                        <img src="images/people/校长8金沙.jpg" alt="金沙">
+                        <img src="images/museum/校长8金沙.jpg" alt="金沙">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">金沙</div>
@@ -1092,7 +1092,7 @@
                 <!-- 2000年代人物 -->
                 <div class="figure-card active" data-era="2000s">
                     <div class="figure-img">
-                        <img src="images/people/教师照片-2.jpg" alt="秦瑜">
+                        <img src="images/museum/教师照片-2.jpg" alt="秦瑜">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">秦瑜</div>
@@ -1406,4 +1406,5 @@
     </script>
 </body>
 </html>
+
 
