--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -747,7 +747,7 @@
                 <!-- 1980年代照片 -->
                 <div class="photo-card" data-year="1980s">
                     <div class="photo-img">
-                        <img src="images/museum/6.学校建校80周年庆祝大会场景.jpg" alt="学校建校80周年庆祝大会">
+                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="学校建校80周年庆祝大会">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">学校建校80周年庆祝大会</div>
@@ -822,15 +822,15 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/yu-zizhen-full.mp3" type="audio/mpeg">
+                            <source src="audio/建筑档案.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
                             郁子贞老先生回忆凤山高小时期的校园风貌、教学情况和学生生活，是研究学校早期历史的重要口述资料。
                         </div>
                         <div class="audio-versions">
-                            <button class="version-btn" onclick="playAudioVersion('yu-zizhen-full.mp3')">完整版 (45分钟)</button>
-                            <button class="version-btn" onclick="playAudioVersion('yu-zizhen-short.mp3')">精华版 (15分钟)</button>
+                            <button class="version-btn" onclick="playAudioVersion('建筑档案.m4a')">完整版 (45分钟)</button>
+                         
                         </div>
                     </div>
                 </div>
@@ -842,14 +842,14 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/开场.m4a" type="audio/mpeg">
+                            <source src="audio/人物故事.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
                             张戢光校长回忆文革期间学校更名为"换新天小学"和"东风小学"的特殊时期，以及如何在困难条件下坚持办学。
                         </div>
                         <div class="audio-versions">
-                            <button class="version-btn" onclick="playAudioVersion('建筑档案.m4a')">完整版</button>
+                            <button class="version-btn" onclick="playAudioVersion('人物故事.m4a')">完整版</button>
                         </button>
                         </div>
                     </div>
@@ -862,14 +862,14 @@
                     </div>
                     <div class="audio-content">
                         <audio class="audio-player" controls>
-                            <source src="audio/人物故事.m4a" type="audio/mpeg">
+                            <source src="audio/建筑档案.m4a" type="audio/mpeg">
                             您的浏览器不支持音频播放。
                         </audio>
                         <div class="audio-description">
                             丁修元校长讲述改革开放初期学校的现代化建设，包括引进计算机教室、修建标准运动场等重要举措。
                         </div>
                         <div class="audio-versions">
-                            <button class="version-btn" onclick="playAudioVersion('人物故事.m4a')">完整版 </button>
+                            <button class="version-btn" onclick="playAudioVersion('建筑档案.m4a')">完整版 </button>
                                               </div>
                     </div>
                 </div>
@@ -1404,5 +1404,6 @@
     </script>
 </body>
 </html>
+
 
 
