--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -723,7 +723,7 @@
                 <!-- 1960年代照片 -->
                 <div class="photo-card" data-year="1960s">
                     <div class="photo-img">
-                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.jpg" alt="1962年教学实况录播">
+                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="1962年教学实况录播">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">1962年教学实况录播</div>
@@ -747,7 +747,7 @@
                 <!-- 1980年代照片 -->
                 <div class="photo-card" data-year="1980s">
                     <div class="photo-img">
-                        <img src="images/museum/14.1962年江苏省人民广播电台录播了我校张如娟老师的教学实况.JPG" alt="学校建校80周年庆祝大会">
+                        <img src="images/museum/5.上世纪80年代学校领导班子合影.jpg" alt="学校建校80周年庆祝大会">
                     </div>
                     <div class="photo-content">
                         <div class="photo-title">学校建校80周年庆祝大会</div>
@@ -1388,6 +1388,7 @@
     </script>
 </body>
 </html>
+
 
 
 
