--- a/museum-content.html
+++ b/museum-content.html
@@ -851,6 +851,12 @@
     <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
     <script src="js/main.js"></script>
     <script>
+            document.addEventListener('DOMContentLoaded', function() {
+        // 其他初始化代码...
+        if (typeof initBackgroundMusic === 'function') {
+            initBackgroundMusic();
+        }
+    });
         // 时间轴滚动动画
         function checkTimelineItems() {
             const timelineItems = document.querySelectorAll('.timeline-item');
@@ -954,5 +960,6 @@
 </body>
 
 </html>
+
 
 
