--- a/people-gallery.html
+++ b/people-gallery.html
@@ -442,6 +442,12 @@
 
     <script src="js/main.js"></script>
     <script>
+            document.addEventListener('DOMContentLoaded', function() {
+        // 其他初始化代码...
+        if (typeof initBackgroundMusic === 'function') {
+            initBackgroundMusic();
+        }
+    });
         // 导航切换功能
         document.querySelectorAll('.nav-item').forEach(item => {
             item.addEventListener('click', function() {
@@ -496,6 +502,7 @@
 </body>
 
 </html>
+
 
 
 
