--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>我们的校园记忆 - 线上数字博物馆</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-
     <style>
         .homepage {
             min-height: 100vh;
@@ -297,7 +296,7 @@
                 <div class="footer-section">
                     <h3>祝愿</h3>
                     <p>学校越来越好</p>
-
+                    <p>我们的前程似锦</p>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -323,15 +322,7 @@
                 homepage.className = 'homepage ' + season + '-bg';
             });
         });
-            // 页面加载完成后初始化
-    document.addEventListener('DOMContentLoaded', function() {
-        console.log('🏠 首页加载完成');
-        if (typeof initBackgroundMusic === 'function') {
-            initBackgroundMusic();
-        } else {
-            console.error('❌ initBackgroundMusic 函数未找到');
-        }
-    });
+
         // 处理背景图片加载失败
         window.addEventListener('load', function() {
             const seasons = ['spring', 'summer', 'autumn', 'winter'];
@@ -342,16 +333,7 @@
                 };
                 img.src = `images/backgrounds/${season}.jpg`;
             });
-            
-            // 初始化背景音乐
-            if (typeof initBackgroundMusic === 'function') {
-                initBackgroundMusic();
-            }
         });
     </script>
 </body>
 </html>
-
-
-
-
