--- a/audio-video-archive.html
+++ b/audio-video-archive.html
@@ -1005,7 +1005,7 @@
                 <!-- 1960年代人物 -->
                 <div class="figure-card active" data-era="1960s">
                     <div class="figure-img">
-                        <img src="images/museum/校长4张戢光.jpg" alt="张戢光">
+                        <img src="images/museum/校长4张戢光.JPG" alt="张戢光">
                     </div>
                     <div class="figure-content">
                         <div class="figure-name">张戢光</div>
@@ -1112,7 +1112,7 @@
                 </div>
                 <div class="footer-section">
                     <h3>关于我们</h3>
-                    <p>作者：全体同学</p>
+                    <p>作者：六（21）班全体同学</p>
                     <p>技术指导：班主任-林柏娟</p>
                 </div>
                 <div class="footer-section">
@@ -1122,7 +1122,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 凤山小学六年级21班 版权所有</p>
+                <p>&copy; 2025 海安市实验小学六年级21班版权所有</p>
             </div>
         </div>
     </footer>
@@ -1399,6 +1399,7 @@
     </script>
 </body>
 </html>
+
 
 
 
