--- a/people-gallery.html
+++ b/people-gallery.html
@@ -397,7 +397,7 @@
     </section>
 
     <!-- 页脚 -->
-    <footer>
+     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
@@ -406,17 +406,17 @@
                 </div>
                 <div class="footer-section">
                     <h3>关于我们</h3>
-                    <p>作者：全体同学</p>
+                    <p>作者：六（21）班全体同学</p>
                     <p>技术指导：班主任-林柏娟</p>
                 </div>
                 <div class="footer-section">
                     <h3>祝愿</h3>
                     <p>学校越来越好</p>
-
+      
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 凤山小学六年级21班 版权所有</p>
+                <p>&copy; 2025 海安市实验小学六年级21班版权所有</p>
             </div>
         </div>
     </footer>
@@ -502,6 +502,7 @@
 </body>
 
 </html>
+
 
 
 
