--- a/museum-content.html
+++ b/museum-content.html
@@ -626,7 +626,7 @@
                 </div>
                 <div class="panorama-card" data-panorama="sports-field">
                     <div class="panorama-img">
-                        <img src="images/museum/78efe110768f60bdc1519e3dfe10daba.jpg" alt="运动场">
+                        <img src="images/museum/操场.png" alt="运动场">
                     </div>
                     <div class="panorama-content">
                         <h3>运动场</h3>
@@ -635,7 +635,7 @@
                 </div>
                 <div class="panorama-card" data-panorama="art-center">
                     <div class="panorama-img">
-                        <img src="images/museum/7fabb335eda5397de7926616f4e6d590.jpg" alt="艺术中心">
+                        <img src="images/museum/艺术中心.png" alt="艺术中心">
                     </div>
                     <div class="panorama-content">
                         <h3>艺术中心</h3>
@@ -960,6 +960,7 @@
 </body>
 
 </html>
+
 
 
 
